--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <div class="button">
         <button>
-            <a href="flower.html">Klik disini</a>
+            <a href="flower.html">Klik ini kak</a>
         </button>
         
     </div>
